--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "vue": "^2.5.17",
+    "vue-persist": "^0.4.0",
     "vuetify": "^1.3.0"
   },
   "devDependencies": {
